--- a/Lab2/Lab 2 - Types of Data.ipynb
+++ b/Lab2/Lab 2 - Types of Data.ipynb
@@ -1102,7 +1102,7 @@
     "\n",
     "print(soup.title.text)\n",
     "print(soup.h2)\n",
-    "# here is reeor --> print(soup.table.text)\n"
+    "# here is error --> print(soup.table.text)\n"
    ]
   },
   {
@@ -1111,7 +1111,7 @@
    "source": [
     "[Q6] Explain why the code above gives an error? Fix the code so that it runs without error.\n",
     "\n",
-    "Ans: No element name table found in the html content"
+    "Ans: No table tag found in the html content"
    ]
   },
   {
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
