fix something in section 2

--- a/HW2/HW 2 - Types of Data (INTL).ipynb
+++ b/HW2/HW 2 - Types of Data (INTL).ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 18,
       "metadata": {
         "id": "rJMe-tyMEQ4p"
       },
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 19,
       "metadata": {
         "id": "kfNoLb-FF-m5"
       },
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 20,
       "metadata": {
         "id": "NEb5FRMzGYlP"
       },
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 21,
       "metadata": {
         "id": "r1YAS93cGn1W"
       },
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 22,
       "metadata": {
         "id": "vkQwFOH0GBHq"
       },
@@ -136,8 +136,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "34 --> 34.0\n",
-            "21.4 --> 21\n"
+            "1 --> 1.0\n",
+            "2.3 --> 2\n"
           ]
         }
       ],
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 23,
       "metadata": {
         "id": "kze1CuNGHIXB"
       },
@@ -185,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 24,
       "metadata": {
         "id": "wGO6J-owHLeG"
       },
@@ -239,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 25,
       "metadata": {
         "id": "5K7zeMGTBMBq"
       },
@@ -252,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -283,7 +283,6 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Unnamed: 0</th>\n",
               "      <th>Age</th>\n",
               "      <th>DailyRate</th>\n",
               "      <th>Department</th>\n",
@@ -292,13 +291,11 @@
               "      <th>MaritalStatus</th>\n",
               "      <th>MonthlyRate</th>\n",
               "      <th>OverTime</th>\n",
-              "      <th>Bonus</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>0</td>\n",
               "      <td>41</td>\n",
               "      <td>1102</td>\n",
               "      <td>Sales</td>\n",
@@ -307,11 +304,9 @@
               "      <td>Single</td>\n",
               "      <td>19479</td>\n",
               "      <td>Yes</td>\n",
-              "      <td>1947.9</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>1</td>\n",
               "      <td>49</td>\n",
               "      <td>279</td>\n",
               "      <td>Research &amp; Development</td>\n",
@@ -320,11 +315,9 @@
               "      <td>Married</td>\n",
               "      <td>24907</td>\n",
               "      <td>No</td>\n",
-              "      <td>2490.7</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>2</td>\n",
               "      <td>37</td>\n",
               "      <td>1373</td>\n",
               "      <td>Research &amp; Development</td>\n",
@@ -333,11 +326,9 @@
               "      <td>Single</td>\n",
               "      <td>2396</td>\n",
               "      <td>Yes</td>\n",
-              "      <td>239.6</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>3</td>\n",
               "      <td>33</td>\n",
               "      <td>1392</td>\n",
               "      <td>Research &amp; Development</td>\n",
@@ -346,11 +337,9 @@
               "      <td>Married</td>\n",
               "      <td>23159</td>\n",
               "      <td>Yes</td>\n",
-              "      <td>2315.9</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>4</td>\n",
               "      <td>27</td>\n",
               "      <td>591</td>\n",
               "      <td>Research &amp; Development</td>\n",
@@ -359,29 +348,28 @@
               "      <td>Married</td>\n",
               "      <td>16632</td>\n",
               "      <td>No</td>\n",
-              "      <td>1663.2</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   Unnamed: 0  Age  DailyRate              Department EducationField  Gender  \\\n",
-              "0           0   41       1102                   Sales  Life Sciences  Female   \n",
-              "1           1   49        279  Research & Development  Life Sciences    Male   \n",
-              "2           2   37       1373  Research & Development          Other    Male   \n",
-              "3           3   33       1392  Research & Development  Life Sciences  Female   \n",
-              "4           4   27        591  Research & Development        Medical    Male   \n",
+              "   Age  DailyRate              Department EducationField  Gender  \\\n",
+              "0   41       1102                   Sales  Life Sciences  Female   \n",
+              "1   49        279  Research & Development  Life Sciences    Male   \n",
+              "2   37       1373  Research & Development          Other    Male   \n",
+              "3   33       1392  Research & Development  Life Sciences  Female   \n",
+              "4   27        591  Research & Development        Medical    Male   \n",
               "\n",
-              "  MaritalStatus  MonthlyRate OverTime   Bonus  \n",
-              "0        Single        19479      Yes  1947.9  \n",
-              "1       Married        24907       No  2490.7  \n",
-              "2        Single         2396      Yes   239.6  \n",
-              "3       Married        23159      Yes  2315.9  \n",
-              "4       Married        16632       No  1663.2  "
+              "  MaritalStatus  MonthlyRate OverTime  \n",
+              "0        Single        19479      Yes  \n",
+              "1       Married        24907       No  \n",
+              "2        Single         2396      Yes  \n",
+              "3       Married        23159      Yes  \n",
+              "4       Married        16632       No  "
             ]
           },
-          "execution_count": 9,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -392,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 27,
       "metadata": {
         "id": "mqOYqV_QEVWY"
       },
@@ -405,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 28,
       "metadata": {
         "id": "AIVAF977Fdg0"
       },
@@ -431,7 +419,6 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Unnamed: 0</th>\n",
               "      <th>Age</th>\n",
               "      <th>DailyRate</th>\n",
               "      <th>Department</th>\n",
@@ -446,7 +433,6 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>0</td>\n",
               "      <td>41</td>\n",
               "      <td>1102</td>\n",
               "      <td>Sales</td>\n",
@@ -459,7 +445,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>1</td>\n",
               "      <td>49</td>\n",
               "      <td>279</td>\n",
               "      <td>Research &amp; Development</td>\n",
@@ -472,7 +457,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>2</td>\n",
               "      <td>37</td>\n",
               "      <td>1373</td>\n",
               "      <td>Research &amp; Development</td>\n",
@@ -485,7 +469,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>3</td>\n",
               "      <td>33</td>\n",
               "      <td>1392</td>\n",
               "      <td>Research &amp; Development</td>\n",
@@ -498,7 +481,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>4</td>\n",
               "      <td>27</td>\n",
               "      <td>591</td>\n",
               "      <td>Research &amp; Development</td>\n",
@@ -520,11 +502,9 @@
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
-              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1465</th>\n",
-              "      <td>1465</td>\n",
               "      <td>36</td>\n",
               "      <td>884</td>\n",
               "      <td>Research &amp; Development</td>\n",
@@ -537,7 +517,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1466</th>\n",
-              "      <td>1466</td>\n",
               "      <td>39</td>\n",
               "      <td>613</td>\n",
               "      <td>Research &amp; Development</td>\n",
@@ -550,7 +529,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1467</th>\n",
-              "      <td>1467</td>\n",
               "      <td>27</td>\n",
               "      <td>155</td>\n",
               "      <td>Research &amp; Development</td>\n",
@@ -563,7 +541,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1468</th>\n",
-              "      <td>1468</td>\n",
               "      <td>49</td>\n",
               "      <td>1023</td>\n",
               "      <td>Sales</td>\n",
@@ -576,7 +553,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1469</th>\n",
-              "      <td>1469</td>\n",
               "      <td>34</td>\n",
               "      <td>628</td>\n",
               "      <td>Research &amp; Development</td>\n",
@@ -589,40 +565,40 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>1470 rows × 10 columns</p>\n",
+              "<p>1470 rows × 9 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "      Unnamed: 0  Age  DailyRate              Department EducationField  \\\n",
-              "0              0   41       1102                   Sales  Life Sciences   \n",
-              "1              1   49        279  Research & Development  Life Sciences   \n",
-              "2              2   37       1373  Research & Development          Other   \n",
-              "3              3   33       1392  Research & Development  Life Sciences   \n",
-              "4              4   27        591  Research & Development        Medical   \n",
-              "...          ...  ...        ...                     ...            ...   \n",
-              "1465        1465   36        884  Research & Development        Medical   \n",
-              "1466        1466   39        613  Research & Development        Medical   \n",
-              "1467        1467   27        155  Research & Development  Life Sciences   \n",
-              "1468        1468   49       1023                   Sales        Medical   \n",
-              "1469        1469   34        628  Research & Development        Medical   \n",
+              "      Age  DailyRate              Department EducationField  Gender  \\\n",
+              "0      41       1102                   Sales  Life Sciences  Female   \n",
+              "1      49        279  Research & Development  Life Sciences    Male   \n",
+              "2      37       1373  Research & Development          Other    Male   \n",
+              "3      33       1392  Research & Development  Life Sciences  Female   \n",
+              "4      27        591  Research & Development        Medical    Male   \n",
+              "...   ...        ...                     ...            ...     ...   \n",
+              "1465   36        884  Research & Development        Medical    Male   \n",
+              "1466   39        613  Research & Development        Medical    Male   \n",
+              "1467   27        155  Research & Development  Life Sciences    Male   \n",
+              "1468   49       1023                   Sales        Medical    Male   \n",
+              "1469   34        628  Research & Development        Medical    Male   \n",
               "\n",
-              "      Gender MaritalStatus  MonthlyRate OverTime   Bonus  \n",
-              "0     Female        Single        19479      Yes  1947.9  \n",
-              "1       Male       Married        24907       No  2490.7  \n",
-              "2       Male        Single         2396      Yes   239.6  \n",
-              "3     Female       Married        23159      Yes  2315.9  \n",
-              "4       Male       Married        16632       No  1663.2  \n",
-              "...      ...           ...          ...      ...     ...  \n",
-              "1465    Male       Married        12290       No  1229.0  \n",
-              "1466    Male       Married        21457       No  2145.7  \n",
-              "1467    Male       Married         5174      Yes   517.4  \n",
-              "1468    Male       Married        13243       No  1324.3  \n",
-              "1469    Male       Married        10228       No  1022.8  \n",
+              "     MaritalStatus  MonthlyRate OverTime   Bonus  \n",
+              "0           Single        19479      Yes  1947.9  \n",
+              "1          Married        24907       No  2490.7  \n",
+              "2           Single         2396      Yes   239.6  \n",
+              "3          Married        23159      Yes  2315.9  \n",
+              "4          Married        16632       No  1663.2  \n",
+              "...            ...          ...      ...     ...  \n",
+              "1465       Married        12290       No  1229.0  \n",
+              "1466       Married        21457       No  2145.7  \n",
+              "1467       Married         5174      Yes   517.4  \n",
+              "1468       Married        13243       No  1324.3  \n",
+              "1469       Married        10228       No  1022.8  \n",
               "\n",
-              "[1470 rows x 10 columns]"
+              "[1470 rows x 9 columns]"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 28,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -634,7 +610,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 29,
       "metadata": {
         "id": "-kdUJtE1FgEL"
       },
@@ -664,7 +640,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 30,
       "metadata": {
         "id": "P5-qoxEyIpdN"
       },
@@ -677,7 +653,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 31,
       "metadata": {
         "id": "HtYFO0xPIt1a"
       },
@@ -702,7 +678,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 32,
       "metadata": {
         "id": "d9RgD_DmIwCp"
       },
@@ -713,7 +689,7 @@
               "<Axes: xlabel='Department'>"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -787,7 +763,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 33,
       "metadata": {
         "id": "SUghYHDpJAHm"
       },
@@ -844,7 +820,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
