Add more answer to last question

--- a/HW2/HW 2 - Types of Data (INTL).ipynb
+++ b/HW2/HW 2 - Types of Data (INTL).ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 2,
       "metadata": {
         "id": "rJMe-tyMEQ4p"
       },
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 3,
       "metadata": {
         "id": "kfNoLb-FF-m5"
       },
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 4,
       "metadata": {
         "id": "NEb5FRMzGYlP"
       },
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 5,
       "metadata": {
         "id": "r1YAS93cGn1W"
       },
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 6,
       "metadata": {
         "id": "vkQwFOH0GBHq"
       },
@@ -136,8 +136,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "1 --> 1.0\n",
-            "2.3 --> 2\n"
+            "12 --> 12.0\n",
+            "3.5 --> 3\n"
           ]
         }
       ],
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 7,
       "metadata": {
         "id": "kze1CuNGHIXB"
       },
@@ -185,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 8,
       "metadata": {
         "id": "wGO6J-owHLeG"
       },
@@ -239,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 9,
       "metadata": {
         "id": "5K7zeMGTBMBq"
       },
@@ -252,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -369,7 +369,7 @@
               "4       Married        16632       No  "
             ]
           },
-          "execution_count": 26,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -380,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 11,
       "metadata": {
         "id": "mqOYqV_QEVWY"
       },
@@ -393,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 12,
       "metadata": {
         "id": "AIVAF977Fdg0"
       },
@@ -598,7 +598,7 @@
               "[1470 rows x 9 columns]"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -610,7 +610,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 13,
       "metadata": {
         "id": "-kdUJtE1FgEL"
       },
@@ -640,7 +640,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 14,
       "metadata": {
         "id": "P5-qoxEyIpdN"
       },
@@ -653,7 +653,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 15,
       "metadata": {
         "id": "HtYFO0xPIt1a"
       },
@@ -678,7 +678,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 16,
       "metadata": {
         "id": "d9RgD_DmIwCp"
       },
@@ -689,7 +689,7 @@
               "<Axes: xlabel='Department'>"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -763,7 +763,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 17,
       "metadata": {
         "id": "SUghYHDpJAHm"
       },
@@ -820,7 +820,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -832,6 +832,16 @@
           },
           "metadata": {},
           "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Percentage difference in average income rate (min-max):\n",
+            "by gender: 4.28%\n",
+            "by marital status: 4.67%\n",
+            "by education field: 11.60%\n"
+          ]
         }
       ],
       "source": [
@@ -860,7 +870,24 @@
         "    plt.text(bar.get_x() + bar.get_width() / 2, bar.get_height(), round(bar.get_height(), 2), ha='center', color='black')\n",
         "\n",
         "plt.tight_layout()\n",
-        "plt.show()"
+        "plt.show()\n",
+        "\n",
+        "# Calculate percentage of different in gender and marital status and education field\n",
+        "gender_diff = (average_monthly_rate.gender.max() - average_monthly_rate.gender.min()) / average_monthly_rate.gender.min() * 100\n",
+        "marital_status_diff = (average_monthly_rate.maritalStatus.max() - average_monthly_rate.maritalStatus.min()) / average_monthly_rate.maritalStatus.min() * 100\n",
+        "education_field_diff = (average_monthly_rate.education_field.max() - average_monthly_rate.education_field.min()) / average_monthly_rate.education_field.min() * 100\n",
+        "\n",
+        "print(\"Percentage difference in average income rate (min-max):\")\n",
+        "print(f\"by gender: {gender_diff:.2f}%\")\n",
+        "print(f\"by marital status: {marital_status_diff:.2f}%\")\n",
+        "print(f\"by education field: {education_field_diff:.2f}%\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Gender-based income differences stand at 4.28% which is lowest rate, female has more income. Marital status contributes to a 4.67% variation with single as highest follow by divorced and married respective. However, the most disparity is based on the field of education, with an 11.60% differenceม HR trend to have highest income follow by Life sciences, Medical, Technical Degree, Marketing, and other as lowest."
       ]
     }
   ],
